added usernames to tweets and styled tweets, added logout button when user is logged in

--- a/app/views/index.erb
+++ b/app/views/index.erb
@@ -1,6 +1,6 @@
 <h1>Welcome to Fwitter</h1>
 
-<h2>What's Happening?</h2>
+<h2>What's happening?</h2>
 
 <div class="button">
   <a href="/signup">Sign Up</a>
