--- a/app/views/users/create_user.erb
+++ b/app/views/users/create_user.erb
@@ -3,16 +3,38 @@
   Create a username and password and join the world's largest conversation.
 </p>
 <form action="/signup" method="post">
+
+  <table>
+    <tr>
+      <td class="col-1">
+        <label>Username:</label>
+      </td>
+      <td>
+        <input type="text" name="username" id=":username">
+      </td>
+    </tr>
+    <tr>
+      <td class="col-1">
+        <label>Email:</label>
+      </td>
+      <td>
+        <input type="text" name="email" id=":email">
+      </td>
+    </tr>
+    <tr>
+      <td class="col-1">
+        <label>Password:</label>
+      </td>
+      <td>
+        <input type="password" name="password" id=":password">
+      </td>
+    </tr>
+  </table>
   <p>
-    <label>Username: </label><input type="text" name="username" id=":username">
-  </p>
-  <p>
-    <label>Email: </label><input type="text" name="email" id=":email">
-  </p>
-  <p>
-    <label>Password: </label><input type="password" name="password" id=":password">
-  </p>
-  <p>
-    <input type="submit" name="submit" value="Submit" id="submit">
+    <input class="submit" type="submit" value="Sign Up" id="submit">
   </p>
 </form>
+
+<p>
+  <a href="/login">Already have an account? Log in here.</a>
+</p>
