--- a/public/stylesheets/styles.css
+++ b/public/stylesheets/styles.css
@@ -14,6 +14,22 @@ body {
   background-repeat: no-repeat;
 }
 
+p {
+  font-size: 1.2em;
+}
+
+h1 {
+  font-family: 'Oswald', 'Helvetica', sans-serif;
+  font-weight: 700;
+  text-transform: uppercase;
+  color: #444;
+  font-kerning: normal;
+}
+
+h2 {
+  font-weight: 400;
+}
+
 a {
   color: #1DA1F2;
   text-decoration: none;
@@ -23,19 +39,33 @@ a:hover {
   text-decoration: underline;
 }
 
+table {
+  display: inline-block;
+}
+
+td {
+  padding: 5px;
+}
+
+td.col-1 {
+  text-align: right;
+}
+
 div.wrapper {
   width: 55%;
   height: 90%;
-  padding: 120px 50px 50px;
+  padding: 120px 20px 20px;
   margin: 0 auto;
   background-color: rgba(255, 255, 255, .85);
   z-index: 0;
   text-align: center;
+  border-radius: 0 0  5px 5px;
 }
 
 div.content {
   display: inline-block;
   margin: 0 auto;
+  width: 100%;
 }
 
 div.navbar {
@@ -50,32 +80,68 @@ div.navbar {
 div.navbar img#logo {
   display: block;
   height: 100px;
-  margin: 0 auto;
+  float: left;
   padding: 8px;
 }
 
-div.button {
+div.button, input.submit {
   display: inline-block;
   background-color: #1DA1F2;
   padding: 10px 20px;
   border-radius: 5px;
   margin: 10px;
+  font-size: 1.1em;
+}
+
+div#logout {
+  float: right;
+  margin-top: 40px;
+  margin-right: 30px;
 }
 
 input.submit {
   border: none;
   outline: none;
-  background-color: none;
   color: #FFF;
   font-weight: 700;
   text-decoration: none;
+  padding-top: 11px;
+  padding-bottom: 9px;
+  cursor: pointer;
 }
 
 div.button a {
   color: #FFF;
   font-weight: 700;
   text-decoration: none;
-  font-size: 1.1em;
+}
+
+div.button-2 {
+  display: inline-block;
+  margin: none;
+  padding: none;
+}
+
+/*//////// TWEET STYLING ///////*/
+
+div.tweet {
+  display: inline-block;
+  margin: 0 auto;
+  width: 100%;
+  border: 2px solid #666;
+  margin-bottom: 15px;
+  padding: 5px;
+  background-color: #fff;
+  text-align: left;
+}
+
+div.tweet div {
+  padding: 5px;
+  font-size: 1.2em;
+}
+
+div.tweet div.username {
+  font-weight: 700;
 }
 
 /*//////// FIXES ////////*/
