styling on tweets and forms started, adjustments made to wrapper

--- a/app/views/tweets/create_tweet.erb
+++ b/app/views/tweets/create_tweet.erb
@@ -1,8 +1,8 @@
-<h1>Write a new tweet!</h1>
+<h1>What's happening?</h1>
 
 <form action="/tweets" method="post">
-  <p><label>Your tweet:</label><input type="text" name="content" value="" id=":content"></p>
-  <p>
-    <input class="submit" type="submit" value="Submit" id="submit">
-  </p>
+<div class="write-tweet">
+  <input type="text" name="content" value="" id=":content">
+</div>
+  <input class="submit" type="submit" value="Tweet" id="submit">
 </form>
