--- a/app/views/layout.erb
+++ b/app/views/layout.erb
@@ -15,6 +15,7 @@
       <% if is_logged_in?(session) %><div class="button" id="logout">
         <a href="/logout">Logout</a>
       </div><% end %>
+      <% if is_logged_in?(session) %><a href="/tweets/new"><div class="button" id="new-tweet"><img src="/images/pencil-24.png" alt="New tweet" /></div></a><% end %>
     </div>
     <div class="wrapper">
       <div class="content">
