--- a/public/stylesheets/styles.css
+++ b/public/stylesheets/styles.css
@@ -12,6 +12,7 @@ body {
   margin: 0;
   background-image: url("/images/20151010_212601.jpg");
   background-repeat: no-repeat;
+  background-attachment: fixed;
 }
 
 p {
@@ -53,19 +54,19 @@ td.col-1 {
 
 div.wrapper {
   width: 55%;
-  height: 90%;
-  padding: 120px 20px 20px;
   margin: 0 auto;
   background-color: rgba(255, 255, 255, .85);
   z-index: 0;
+  margin-top: 100px;
   text-align: center;
-  border-radius: 0 0  5px 5px;
 }
 
 div.content {
   display: inline-block;
   margin: 0 auto;
   width: 100%;
+  padding: 0 20px;
+  overflow: auto;
 }
 
 div.navbar {
@@ -95,8 +96,18 @@ div.button, input.submit {
 
 div#logout {
   float: right;
+  height: 2.5em;
   margin-top: 40px;
   margin-right: 30px;
+}
+
+div#new-tweet {
+  float: right;
+  height: 2.5em;
+  margin-top: 40px;
+}
+
+div#new-tweet img {
 }
 
 input.submit {
@@ -120,6 +131,25 @@ div.button-2 {
   display: inline-block;
   margin: none;
   padding: none;
+}
+
+/*/////// FORM STYLING /////////*/
+
+div.write-tweet input[type="text"] {
+  padding: 10px;
+  margin-bottom: 20px;
+  border: 1px solid #666;
+  transition: box-shadow 0.3s, border 0.3s;
+  width: 90%;
+  font-size: 1.2em;
+  font-family: 'Lato', 'Helvetica', sans-serif;
+  margin-left: auto;
+  margin-right: auto;
+}
+
+div.write-tweet input[type="text"]:focus, div.write-tweet input[type="text"].focus {
+  border: solid 1px #1DA1F2;
+  box-shadow: 0 0 5px 1px #1DA1F2;
 }
 
 /*//////// TWEET STYLING ///////*/
