reversed tweet order, finalized form styles, and ensured same styling across all pages

--- a/app/views/tweets/edit.erb
+++ b/app/views/tweets/edit.erb
@@ -5,5 +5,5 @@
   <div class="write-tweet">
     <input type="text" name="content" value="<%= @tweet.content %>" id=":content">
   </div>
-  <input type="submit" value="Update Tweet" id="submit">
+  <input class="submit" type="submit" value="Update Tweet" id="submit">
 </form>
