--- a/app/views/users/create_user.erb
+++ b/app/views/users/create_user.erb
@@ -9,7 +9,7 @@
       <td class="col-1">
         <label>Username:</label>
       </td>
-      <td>
+      <td class="textbox">
         <input type="text" name="username" id=":username">
       </td>
     </tr>
@@ -17,7 +17,7 @@
       <td class="col-1">
         <label>Email:</label>
       </td>
-      <td>
+      <td class="textbox">
         <input type="text" name="email" id=":email">
       </td>
     </tr>
@@ -25,7 +25,7 @@
       <td class="col-1">
         <label>Password:</label>
       </td>
-      <td>
+      <td class="textbox">
         <input type="password" name="password" id=":password">
       </td>
     </tr>
