--- a/app/views/tweets/show_tweet.erb
+++ b/app/views/tweets/show_tweet.erb
@@ -1,4 +1,4 @@
-<h1><%= current_user.username %> tweeted:</h1>
+<h1><%= @tweet.user.username %> tweeted:</h1>
 <div class="tweet">
   <div class="username">
     <a href="/users/<%= @tweet.user.slug %>">@<%= @tweet.user.username %></a>
@@ -7,9 +7,8 @@
       <%= @tweet.content %>
   </div>
 </div>
-<br>
 
-
+<div class="<% if @tweet.user == current_user %>click<% else %>no-click<% end %>">
 <div class="button" id="Edit Tweet"><a href="/tweets/<%= @tweet.id %>/edit">Edit Tweet</a></div>
 
 <div class="button-2">
@@ -17,4 +16,5 @@
     <input type="hidden" name="_method" value="delete">
     <input class="submit" type="submit" value="Delete Tweet" id="Delete Tweet">
   </form>
+</div>
 </div>
