--- a/app/views/users/login.erb
+++ b/app/views/users/login.erb
@@ -5,7 +5,7 @@
       <td class="col-1">
         <label>Username:</label>
       </td>
-      <td>
+      <td class="textbox">
         <input type="text" name="username" id=":username">
       </td>
     </tr>
@@ -13,7 +13,7 @@
       <td class="col-1">
         <label>Password: </label>
       </td>
-      <td>
+      <td class="textbox">
         <input type="password" name="password" id=":password">
       </td>
     </tr>
