removed error from css for write-tweet textbox

--- a/public/stylesheets/styles.css
+++ b/public/stylesheets/styles.css
@@ -163,7 +163,7 @@ div.write-tweet input[type="text"] {
 }
 
 div.write-tweet input[type="text"] {
-  padding: 10class="textbox"px;
+  padding: 10px;
   margin-bottom: 20px;
   width: 90%;
   margin-left: auto;
