--- a/app/views/users/create_user.erb
+++ b/app/views/users/create_user.erb
@@ -2,6 +2,6 @@
 <form action="/signup" method="post">
   username <input type="text" name="username" id="username">
   email <input type="text" name="email" id="email">
-  password <input type="text" name="password" id="password">
+  password <input type="password" name="password" id="password">
   Signup <input type="submit" name="Signup" id="Signup">
 </form>
