--- a/app/views/tweets/create_tweet.erb
+++ b/app/views/tweets/create_tweet.erb
@@ -1,5 +1,15 @@
 <h1>What's happening?</h1>
 
+<% if flash.has?(:success) %>
+  <div class="success-message">
+    <%= flash[:success] %>
+  </div>
+<% elsif flash.has?(:error) %>
+  <div class="error-message">
+    <%= flash[:error] %>
+  </div>
+<% end %>
+
 <form action="/tweets" method="post">
 <div class="write-tweet">
   <input type="text" name="content" value="" id=":content">
