--- a/app/views/users/login.erb
+++ b/app/views/users/login.erb
@@ -1,4 +1,15 @@
 <h1>Log in to your account</h1>
+
+<% if flash.has?(:success) %>
+  <div class="success-message">
+    <%= flash[:success] %>
+  </div>
+<% elsif flash.has?(:error) %>
+  <div class="error-message">
+    <%= flash[:error] %>
+  </div>
+<% end %>
+
 <form action="/login" method="post">
   <table>
     <tr>
