--- a/app/views/users/login.erb
+++ b/app/views/users/login.erb
@@ -1,7 +1,7 @@
 <h1>Log In Below:</h1>
 <form action="/login" method="post">
-  username <input type="text" name="name" id="name">
+  username <input type="text" name="username" id="username">
   email <input type="text" name="email" id="email">
   password <input type="text" name="password" id="password">
-  Log In <input type="submit" name="Log In" id="Log In">
+  Log In <input type="submit" name="submit" id="submit">
 </form>
