--- a/app/views/tweets/show_tweet.erb
+++ b/app/views/tweets/show_tweet.erb
@@ -3,14 +3,14 @@
 </p>
 
 <h2>Edit Tweet</h2>
-<form action="/tweets/:id" method="post">
+<form action="/tweets/<%=@tweet.id%>" method="post">
   <input id="hidden" type="hidden" name="_method" value="patch">
   <input type="text" name="content">
   <input type="submit" value="submit">
 </form>
 
 <h2>Delete Tweet</h2>
-<form action="/tweets/:id/delete" method="post">
+<form action="/tweets/<%=@tweet.id%>/delete" method="post">
   <input id="hidden" type="hidden" name="_method" value="delete">
   <input type="text" name="content">
   <input type="submit" value="Delete Tweet">
