--- a/app/views/index.erb
+++ b/app/views/index.erb
@@ -1,4 +1,4 @@
-<h1>Welcome To Fwitter</h1>
-<a href="/login">Login</a>
-<a href="/signup">Sign Up</a>
+<h1>Welcome to Fwitter</h1>
+<a class="button" href="/login">Login</a>
+<a class="button" href="/signup">Sign Up</a>
 Welcome to Fwitter
