--- a/app/views/tweets/tweets.erb
+++ b/app/views/tweets/tweets.erb
@@ -1,2 +1,15 @@
 <h2>Welcome, <%=@user.username%></h2>
-<a href="#"></a>
+  <%Tweet.all.reverse_each do |tweet|%>
+    <div class="content">
+      <p class="user">@<a class="user" href="/users/<%=tweet.user.slug if tweet.user%>"><%=tweet.user.username if tweet.user%></a></p>
+      <p><%=tweet.content if tweet.content%></p>
+      <%if tweet.user == current_user%>
+        <div class="delete"><a class="options" href="/tweets/<%=tweet.id%>/edit">Edit</a> /<form class="options" action="/tweets/<%=tweet.id%>/delete" method="post">
+          <input type="hidden" id="hidden" name="_method" value="delete">
+          <input type="submit" class="button" value="Delete Tweet">
+        </form></div>
+      <%end%>
+    </div>
+  <%end%>
+<a class="button" href="/tweets/new">Tweet</a>
+<a class="button" href="/logout">Logout</a>
