--- a/public/stylesheets/main.css
+++ b/public/stylesheets/main.css
@@ -10,7 +10,9 @@ h1 {
   font: blue;
 }
 
-a{
+a.button{
+  font-family: 'Raleway', sans-serif;
+  background: none;
   color: blue;
   text-decoration: none;
   font-size: 1.5em;
@@ -18,11 +20,37 @@ a{
   margin: 20px auto;
   padding: 15px;
   border: 1px solid blue;
-  width: 100px;
+  max-width: 200px;
+  width: auto;
   transition: 0.3s ease;
 }
 
-a:hover {
+form {
+  display: inline-block;
+}
+
+.delete {
+  margin-left: 10px;
+}
+
+input[type="submit" i]{
+  font-family: 'Raleway', sans-serif;
+  font-size: 1em;
+  background: none;
+  color: white;
+  background: none;
+  border: none;
+  display: inline;
+  width: auto;
+  text-overflow: ellipsis;
+}
+
+input[type="submit" i]:hover {
+  text-decoration: underline;
+  border: none;
+}
+
+a.button:hover{
   box-shadow: inset 0 0 0 2px blue;
   transition: 0.3s ease;
 }
@@ -36,8 +64,18 @@ div.content {
   border-radius: 5px;
 }
 
-.content p.user {
+.content .user {
   font-weight: bold;
+  color: white;
+}
+
+.options {
+  color: white;
+  text-decoration: none;
+}
+
+.options:hover {
+  text-decoration: underline;
 }
 
 .content p {
