--- a/app/views/tweets/edit_tweet.erb
+++ b/app/views/tweets/edit_tweet.erb
@@ -1,6 +1,7 @@
 <h2>Edit tweet</h2>
 
 <form action="/tweets/<%= @tweet.id %>" method="post">
+  <input type="hidden" id="hidden" name="_method" value="patch">
   <p><%= @tweet.content %></p>
   <p><label>Edit: <input type="text" name="tweet[content]" id="content" required></label></p>
   <p><input type="submit" value="submit"></p>
