--- a/app/views/tweets/show_tweet.erb
+++ b/app/views/tweets/show_tweet.erb
@@ -11,6 +11,7 @@ even if it's not your tweet to delete. Hey, I don't make the rules. -->
 <p>
   <a href="/tweets/<%= @tweet.id %>/edit">Edit Tweet</a>
   <form action="/tweets/<%= @tweet.id %>/delete" method="post">
+    <input type="hidden" id="hidden" name="_method" value="delete">
     <input type="submit" value="Delete Tweet">
   </form>
 </p>
