--- a/app/views/users/layout.erb
+++ b/app/views/users/layout.erb
@@ -14,6 +14,7 @@
     <nav id="main_nav">
         <% if session[:id] %>
           <a href="/tweets">tweets</a>
+          <a href="/tweets/new">new tweet</a>
           <a href="/logout">log out</a>
         <% else %>
           <a href="/login">log in</a>
