--- a/app/views/tweets/edit_tweet.erb
+++ b/app/views/tweets/edit_tweet.erb
@@ -1,9 +1,7 @@
-<h4>Edit your tweet</h4>
+<h4>Edit Tweet</h4>
 
-<form action="/tweets/:id" method="post">
-  <input type="hidden" id="hidden" name="_mehtod" value="patch">
+<form action="/tweets/<%=@tweet.id%>" method="post">
+  <input type="hidden" id="hidden" name="_method" value="patch">
   <input type="text" name="content" value="<%=@tweet.content%>">
-
   <input type="submit" value="submit">
-
 </form>
