--- a/app/views/tweets/show_tweet.erb
+++ b/app/views/tweets/show_tweet.erb
@@ -1,8 +1,8 @@
-<%=@tweet[:content]%>
+<%=@tweet.content%>
 
-<form action="tweets/:id/delete" method="post">
+<form action="/tweets/<%=@tweet.id%>/delete" method="post">
   <input id="hidden" type="hidden" name="_method" value="DELETE">
   <input type="submit" value="Delete Tweet">
 </form>
 
-<a href="/tweets/:id/edit">Edit Tweet</a>
+<a href="/tweets/<%=@tweet.id%>/edit">Edit Tweet</a>
