--- a/app/views/users/create_user.erb
+++ b/app/views/users/create_user.erb
@@ -1,4 +1,4 @@
-<h1>Create new Fwitter Account here!</h1>
+<h1>Create new Fwitter User Account here!</h1>
 
 <form action="/signup" method="post">
   <label>Username:</label>
