Add migration to create users and tweets, work on controllers

--- a/app/views/users/login.erb
+++ b/app/views/users/login.erb
@@ -1,1 +1,16 @@
 views/users/login.erb
+
+<h1>User Login</h1>
+
+<form action='/login' method = "POST">
+  <label>Username: </label>
+  <input type="text" name="username">
+
+  <label>Email: </label>
+  <input type="text" name="email">
+
+  <label>Password: </label>
+  <input type="password" name="password">
+
+  <input type="submit" value="Log In">
+</form>
