--- a/app/views/users/login.erb
+++ b/app/views/users/login.erb
@@ -12,5 +12,5 @@ views/users/login.erb
   <label>Password: </label>
   <input type="password" name="password">
 
-  <input type="submit" value="Log In">
+  <input type="submit" value="Log In" id="submit">
 </form>
