--- a/app/views/tweets/edit_tweet.erb
+++ b/app/views/tweets/edit_tweet.erb
@@ -1,6 +1,7 @@
 views/tweets/edit_tweet
 
 <form method="post" action='/tweets/<%=@tweet.id%>/edit'>
+  <input id="hidden" type="hidden" name="_method" value="PATCH">
   <label>Edit Tweet: </label>
   <input type="text" name="content" value="<%=@tweet.content%>">
   <input type="submit" name="edit" id="submit" value="Edit Tweet">
