--- a/app/views/users/create_user.erb
+++ b/app/views/users/create_user.erb
@@ -2,10 +2,10 @@
 
 <form method="POST" action="/signup">
   <label>user name:</label>
-  <input type="text" name="user[user_name]">
+  <input type="text" name="username">
   <label>email:</label>
-  <input type="text" name="user[email]">
+  <input type="text" name="email">
   <label>password:</label>
-  <input type="text" name="user[password]">
+  <input type="text" name="password">
   <input type="submit" name="Sign Up">
 </form>
