--- a/app/views/users/create_user.erb
+++ b/app/views/users/create_user.erb
@@ -1,3 +1,7 @@
+<!-- <% if Helpers.is_logged_in?(session) %>
+<a href='/tweets'></a>
+<% end %> -->
+
 <h1>Sign up for a Fwitter account...</h1>
 
 <form method="POST" action="/signup">
