--- a/app/views/index.erb
+++ b/app/views/index.erb
@@ -1,4 +1,5 @@
 app/views/index.erb
 <h1>Welcome to Fwitter</h1>
 
-<a href='/signup'>Sign Up</a>
+<a href='/signup'>Sign Up</a><br></br>
+<a href='/login'>Log In</a>
