--- a/app/views/users/login.erb
+++ b/app/views/users/login.erb
@@ -5,5 +5,5 @@
   <input type="text" name="username">
   <label>password:</label>
   <input type="text" name="password">
-  <input type="submit" value="Log In">
+  <input type="submit" value="submit">
 </form>
