--- a/app/views/users/create_user.erb
+++ b/app/views/users/create_user.erb
@@ -15,7 +15,7 @@
   </p>
 
   <p class="login button"> 
-    <input type="submit" value="Sign Up" /> 
+    <input type="submit" id="submit" value="Sign Up" /> 
   </p>
 
   </form>
