--- a/app/views/users/login.erb
+++ b/app/views/users/login.erb
@@ -1,5 +1,5 @@
 <h1>Login to Fwitter</h1> 
-  <form action="/tweets" method="POST"> 
+  <form action="/login" method="POST"> 
   <p> 
     <label for="username"> Your username </label>
     <input type="text" name="username" id="username"/>
@@ -15,7 +15,7 @@
   </p>
 
   <p class="login button"> 
-    <input type="submit" value="Sign Up" /> 
+    <input type="submit" id="submit" value="Login" /> 
   </p>
   <p class="change_link">
     Not a member yet ?
