--- a/app/views/tweets/create_tweet.erb
+++ b/app/views/tweets/create_tweet.erb
@@ -7,7 +7,7 @@
 <body>
 <h1>Write Your Tweet, People Care About Your Opinions!</h1>
   <form action="/tweets" method="POST">
-    <input type="text" name="tweet" id="tweet"><br><br>
-    <input type="submit" value="Tweet" id="Submit">
+    <input type="text" name="content"><br><br>
+    <input type="submit" value="submit">
 </body>
 </html>
