--- a/app/views/tweets/show_tweet.erb
+++ b/app/views/tweets/show_tweet.erb
@@ -1,12 +1,11 @@
+<h1>Here is Your Brilliant Tweet</h1>
 
+  <h3>Tweeted By: <%= @tweet.user.username %></h3>
+  <h3>Tweet: <%= @tweet.content %></h3>
 
-<h1>Here is/are a/some tweet/tweets</h1>
-
-Name: <%= @tweet.user %>
-Tweet <%= @tweet.content %>
-
-<form method="post" action="/tweets/:slug/delete">
-    <input id="hidden" type="hidden" name="_method" value="delete">
-
-  <input type="submit" value="delete">
+<form method="post" action="/tweets/<%= @tweet.id %>/delete">
+  <input id="hidden" type="hidden" name="_method" value="delete">
+  <input type="submit" value="Delete Tweet">
 </form>
+
+<a href="/tweets/<%=@tweet.id%>/edit">Edit Tweet</a>
