--- a/app/views/tweets/new.erb
+++ b/app/views/tweets/new.erb
@@ -1,5 +1,5 @@
 <h1>Welcome, <%=@user.username %></h1>
-<form class="" action="/tweets/new" method="post">
+<form class="" action="/tweets" method="post">
   <input type="input" name="content" value="">
   <input type="submit" name="submit" id="submit" value="Create new tweet">
 </form>
