--- a/app/views/tweets/show_tweet.erb
+++ b/app/views/tweets/show_tweet.erb
@@ -6,6 +6,6 @@
 <form method="post" action="/tweets/<%= @tweet.id %>/delete">
   <input id="hidden" type="hidden" name="_method" value="delete">
   <input type="submit" value="Delete Tweet">
-</form>
+</form><br>
 
 <a href="/tweets/<%=@tweet.id%>/edit">Edit Tweet</a>
