--- a/app/views/tweets/show.erb
+++ b/app/views/tweets/show.erb
@@ -3,4 +3,8 @@ views/tweets/show.erb <br></br>
 <h1><%= @tweet.content %> -- <%= User.find_by_id(@tweet.user_id).username %></h1>
 
 <h3>Edit Tweet</h3>
-<h3>Delete Tweet</h3>
+
+<form method="POST" action="/tweets/<%= @tweet.id %>/delete">
+  <input type="hidden" name="_method" value="delete">
+  <input type="submit" value="Delete Tweet">
+</form>
