--- a/app/views/tweets/create_tweet.erb
+++ b/app/views/tweets/create_tweet.erb
@@ -8,6 +8,8 @@
 <h1>Write Your Tweet, People Care About Your Opinions!</h1>
   <form action="/tweets" method="POST">
     <input type="text" name="content"><br><br>
-    <input type="submit" value="submit">
+    <p><strong>Phone Number (Optional - Just type in a 10-digit telephone number)<br><br>
+    <input type="text" name="phone_number"></strong></p>
+   <input value="submit" type="submit">
 </body>
 </html>
