--- a/app/views/users/login.erb
+++ b/app/views/users/login.erb
@@ -5,7 +5,7 @@
   <input type="text" name="username">
   <label>Your password: </label>
   <input type="text" name="password">
-  <input type="submit" value="Login">
+  <input type="submit" value="submit">
 
   <p class="change_link">
     Not a member yet ?
