--- a/app/views/tweets/show.erb
+++ b/app/views/tweets/show.erb
@@ -2,9 +2,11 @@
 
 <h2><%= @tweet.content %> -- <%= User.find_by_id(@tweet.user_id).username %></h2>
 
-<a href="/tweets/<%=@tweet.id%>/edit">Edit Tweet</a>
+<a href="/tweets/<%=@tweet.id%>/edit">Edit Tweet</a> &nbsp;  &nbsp;
 
 <form method="POST" action="/tweets/<%= @tweet.id %>/delete">
   <input type="hidden" name="_method" value="delete">
   <input type="submit" value="Delete Tweet">
 </form>
+
+<a href="/tweets">Return to home</a> 
