adding basic style with bootstrap

--- a/app/views/tweets/new.erb
+++ b/app/views/tweets/new.erb
@@ -1,8 +1,8 @@
-<h1>Write Your Tweet, People Care About Your Opinions!</h1>
+<h1 class="bg-info">Write Your Tweet, People Care About Your Opinions!</h1>
 
 <form method="POST" action="/tweets">
-  <label>Write here... </label>
+  <label>Tweet away:</label>
   <input type="text" name="content"><br></br>
-  <p><strong>Phone Number (Optional - Just type in a 10-digit telephone number)<br><br>
-  <input type="submit" name="submit" value="submit">
+  <p><small>Phone Number to Catch this Tweet (placeholder: twilio functionality disabled):</small><br><br>
+  <input type="submit" name="submit" class="btn btn-info" role="button" value="submit">
 </form>
