--- a/app/views/index.erb
+++ b/app/views/index.erb
@@ -1,4 +1,4 @@
-<h1>Welcome to Fwitter</h1>
+<h1 class="bg-primary">Welcome to Fwitter</h1>
 
-<a href="/signup"> Sign up</a><br><br>
-<a href="/login"> Login</a>
+<a href="/signup" class="btn btn-info" role="button"> Sign up</a><br><br>
+<a href="/login" class="btn btn-info" role="button"> Login</a>
