--- a/app/views/tweets/edit.erb
+++ b/app/views/tweets/edit.erb
@@ -1,8 +1,11 @@
-<h1>Edit your tweet</h1>
+<h1 class="bg-info">Edit your tweet</h1>
+
 
 <form method="POST" action="/tweets/<%= @tweet.id %>">
   <input type="hidden" name="_method" value="patch">
-  <label>Tweet:</label>
-  <input type="text" name="content" value="<%= @tweet.content %>"><br></br>
-  <input type="submit" name="submit" value="submit">
+  <div class="form-group">
+  <label for="inputdefault">Tweet:</label>
+  <input type="text" name="content" class="form-control" id="inputdefault" value="<%= @tweet.content %>"><br></br>
+  <input type="submit" name="submit" class="btn btn-info" role="button" value="submit">
+</div>
 </form>
