--- a/app/views/users/create_user.erb
+++ b/app/views/users/create_user.erb
@@ -1,4 +1,4 @@
-<h1>Sign Up for Fwitter</h1>
+<h1 class="bg-info">Sign Up for Fwitter</h1>
 
 <form method="POST" action="/signup">
   <label>Your username: </label>
@@ -7,5 +7,5 @@
   <input type="text" name="password" placeholder="password">
   <label>Your email address: </label>
   <input type="text" name="email" placeholder="email">
-  <input type="submit" name="Sign Up">
+  <input type="submit" class="btn btn-info" role="button" name="Sign Up">
 </form>
