--- a/app/views/users/login.erb
+++ b/app/views/users/login.erb
@@ -1,14 +1,14 @@
-<h1>Login to Fwitter</h1>
+<h1 class="bg-info">Login to Fwitter</h1>
 
 <form method="POST" action="/login">
   <label>Your username: </label>
   <input type="text" name="username">
   <label>Your password: </label>
   <input type="text" name="password">
-  <input type="submit" value="submit">
+  <input type="submit" class="btn btn-info" role="button" value="submit">
 
   <p class="change_link">
-    Not a member yet ?
+    Not a member yet?
   <a href="/signup" class="to_register">Sign Up</a>
   </p>
 </form>
