--- a/app/views/tweets/new.erb
+++ b/app/views/tweets/new.erb
@@ -1,7 +1,6 @@
+<h1>Create Tweet</h1>
 <form action="/tweets" method="POST">
     
 Tweet: <input type="text" name="tweet[content]" id="content">
 <input type="submit" value="submit">
 </form>
-{"content" => "value"}
-{"tweet" => {"content" => "value"}} 
