--- a/app/views/users/login.erb
+++ b/app/views/users/login.erb
@@ -2,5 +2,5 @@
 <input type="text" name="username" placeholder="username">
 <input type="text" name="email" placeholder="email">
 <input type="password" name="password" placeholder="password">
-<input type="submit">
+<input type="submit" id = "submit">
 </form>
