--- a/app/views/users/login.erb
+++ b/app/views/users/login.erb
@@ -1,5 +1,5 @@
 <h1>Login</h1>
-<form action="/signup" method="POST">
+<form action="/login" method="POST">
   <lable>Username:</label>
   <input type="text" id="username" name="username">
   <br></br>
