--- a/app/views/index.erb
+++ b/app/views/index.erb
@@ -1,3 +1,3 @@
 <h1>Welcome to Fwitter</h1>
-<a href="/users/signup">Sign Up</a>
-  <a href="/users/login">Log In</a>
+<a href="/signup">Sign Up</a>
+  <a href="/login">Log In</a>
