--- a/app/views/tweets/show.erb
+++ b/app/views/tweets/show.erb
@@ -1,1 +1,11 @@
 <%= @tweet.content %>
+
+<form method="post" action="/tweets/<%=@tweet.id%>/delete">
+  <input id="hidden" type="hidden" name="_method" value="DELETE">
+  <input type="submit" value="Delete Tweet">
+</form>
+
+<form method="get" action="/tweets/<%=@tweet.id%>/edit">
+  <input id="hidden" type="hidden" name="_method" value="Edit">
+  <input type="submit" value="Edit Tweet">
+</form>
