--- a/app/views/users/login.erb
+++ b/app/views/users/login.erb
@@ -1,1 +1,6 @@
-login
+<form action="/login" method="post">
+  <input type="text" name="username" value="username">
+  <input type="text" name="password" value="password">
+  <input type="submit" value="submit">
+
+</form>
