--- a/app/views/tweets/tweets.erb
+++ b/app/views/tweets/tweets.erb
@@ -1,4 +1,5 @@
-<h1>Welcome, <%= @user.username %></h1>
+<h1>Welcome, <%= @user.username %>!</h1>
+<h3>Those tweets, tho...</h3>
 <% @user.tweets.each do |tweet| %>
   <%= tweet.content %>
 <% end %>
