Add new tweet functionality.

--- a/app/views/tweets/show_tweet.erb
+++ b/app/views/tweets/show_tweet.erb
@@ -1,4 +1,4 @@
-<img src="images/bird-png.png" alt="" />
+<img src="../images/bird-png.png" alt="" />
 <%= @tweet.content %>
 
 <a href="/tweet/<%= @tweet.id %>/edit">Edit this tweet.</a>
