--- a/app/views/tweets/show_tweet.erb
+++ b/app/views/tweets/show_tweet.erb
@@ -1,9 +1,9 @@
 <img src="../images/bird-png.png" alt="" />
 <%= @tweet.content %>
 
-<a href="/tweet/<%= @tweet.id %>/edit">Edit this tweet.</a>
+<a href="/tweet/<%= @tweet.id %>/edit">Edit Tweet</a>
 
 <form action="/tweet/<%= @tweet.id %>/delete" method="post">
   <input type="hidden" name="_method" value="delete">
-  <input type="submit" value="delete">
+  <input type="submit" value="Delete Tweet">
 </form>
