--- a/app/views/tweets/edit_tweet.erb
+++ b/app/views/tweets/edit_tweet.erb
@@ -1,4 +1,6 @@
-<form action="/tweet/<%= @tweet.id %>" method="post">
-  <input type="submit" name="_method" value="patch">
+<form action="/tweets/<%= @tweet.id %>" method="post">
+  <input type="hidden" name="_method" value="patch">
+  <input type="hidden" name="id" value="@tweet.id">
   <input type="text" name="content" value="<%= @tweet.content %>">
+  <input type="submit" value="submit">
 </form>
