Corrected line 3 to edit tweet

--- a/app/views/tweets/show_tweet.erb
+++ b/app/views/tweets/show_tweet.erb
@@ -1,6 +1,6 @@
 <%= @tweet.content %>
 
-<a href="/tweets/:id/edit/">Edit Tweet</a>
+<a href="/tweets/<%= @tweet.id %>/edit">Edit Tweet</a>
  
 <form action="/tweets/<%= @tweet.id %>/delete" method="post">
         <input type="hidden" id="hidden" name="_method" value="DELETE">
