--- a/app/views/tweets/create_tweet.erb
+++ b/app/views/tweets/create_tweet.erb
@@ -1,4 +1,4 @@
-<form action="/tweets/new" method="post">
+<form action="/tweets" method="post">
   <input type="text" name="content" value="content">
   <input type="submit" value="submit">
 </form>
