--- a/app/views/users/login.erb
+++ b/app/views/users/login.erb
@@ -3,11 +3,11 @@
 <h1>log in here.</h1>
 
 <label><h3>Username:</h3></label>
-  <input type="text" id="username">
+  <input type="text" id="username" name="username">
   <br><br>
 
 <label><h3>Password:</h3></label>
-  <input type="text" id="password">
+  <input type="text" id="password" name="password">
   <br><br>
 
 <input type="submit" value="submit">
