--- a/app/views/tweets/create_tweet.erb
+++ b/app/views/tweets/create_tweet.erb
@@ -1,3 +1,4 @@
-<form action="" method="">
-  <input="" name="tweet"/>
+<form action="/tweets/new" method="post">
+  <input type="text" name="content">
+  <input type="submit" value="submit">
  </form>
