--- a/app/views/users/login.erb
+++ b/app/views/users/login.erb
@@ -1,5 +1,5 @@
 <form method="post" action="/login">
   <p>Username: <input type="text" name="username"></p>
   <p>Password: <input type="text" name="password"></p>
-  <input type="submit" value="Log In">
+  <input type="submit" value="submit">
 </form>
