--- a/app/views/layout.erb
+++ b/app/views/layout.erb
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8">
     <title>Fwitter</title>
-    <link rel="stylesheet" type="text/css" href="stylesheets/stylesheet.css">
+    <link rel="stylesheet" type="text/css" href="/stylesheets/stylesheet.css">
   </head>
   <body>
     <%= yield %>
