--- a/app/views/tweets/index.erb
+++ b/app/views/tweets/index.erb
@@ -1,1 +1,10 @@
-<h1>Hello, <%= current_user.username %></h1>
+<h1>Hey, <%= current_user.username %></h1>
+<h3>Your Tweets:<h3>
+<ul>
+  <% @tweets.each do |tweet| %>
+    <li><a href="/tweets/<%= tweet.slug %>"><%= tweet.title %>, updated at: <%= tweet.updated_at %></a></li>
+  <% end %>
+  <br><a href="tweets/new">Create New Tweet</a><br><br>
+  <br><a href="/">Main Page</a>
+
+</ul>
