--- a/app/views/tweets/edit.erb
+++ b/app/views/tweets/edit.erb
@@ -1,1 +1,10 @@
-<h1>Enter Title and Content of your new Tweet:</h1>
+<h1>Edit <%= @tweet.title %>:</h1>
+<% if flash.has?(:tweet_errors) %>
+  <p class="flash"><%= flash[:tweet_errors] %></p>
+<% end %>
+<form action="/tweets/<%= @tweet.slug %>" method="post">
+  <input type="hidden" name="_method" value="patch">
+  <input type="text" name="tweet[title]" value="<%= @tweet.title %>"><br>
+  <textarea name="tweet[content]" rows="10" cols="40"><%= @tweet.content %></textarea><br>
+  <input type="submit" name="edit" value="Edit" ><br>
+</form>
