--- a/app/views/tweets/edit.erb
+++ b/app/views/tweets/edit.erb
@@ -2,9 +2,9 @@
 <% if flash.has?(:tweet_errors) %>
   <p class="flash"><%= flash[:tweet_errors] %></p>
 <% end %>
-<form action="/tweets/<%= @tweet.slug %>" method="post">
+<form action="/tweets/<%= @tweet.id %>" method="post">
   <input type="hidden" name="_method" value="patch">
-  <input type="text" name="tweet[title]" value="<%= @tweet.title %>"><br>
-  <textarea name="tweet[content]" rows="10" cols="40"><%= @tweet.content %></textarea><br>
-  <input type="submit" name="edit" value="Edit" ><br>
+  <input type="text" name="tweet[title]" value="<%= @tweet.title %>" id="title"><br>
+  <textarea name="tweet[content]" rows="10" cols="40" id="content"><%= @tweet.content %></textarea><br>
+  <input type="submit" name="edit" value="Edit" id="submit"><br>
 </form>
