--- a/app/views/index.erb
+++ b/app/views/index.erb
@@ -1,4 +1,4 @@
 <h1>Welcome to Fwitter</h1>
-<a href="/users/create_users">Signup</a>
+<a href="/signup">Signup</a>
 <br><br>
-<a href="/users/login">Login</a>
+<a href="/login">Login</a>
