--- a/app/views/users/create_user.erb
+++ b/app/views/users/create_user.erb
@@ -2,7 +2,7 @@
 <form action="/signup" method="post">
   <label for="username">Username</label><br>
   <input type="text" name="username" placeholder="username" value=""><br><br>
-  <label for="email"></label><br>
+  <label for="email">Email</label><br>
   <input type="text" name="email" placeholder="email" value=""><br><br>
   <label for="password">Password</label><br>
   <input type="password" name="password" placeholder="password" value=""><br><br>
