--- a/app/views/layout.erb
+++ b/app/views/layout.erb
@@ -3,8 +3,8 @@
     <head>
         <title>Fwitter</title>
         <meta charset="UTF-8">
-        <!--<meta name="viewport" content="width=device-width, initial-scale=1">-->
-        <link href="css/style.css" rel="stylesheet" type="text/css">
+        <meta name="viewport" content="width=device-width, initial-scale=1">
+        <link href="../../css/style.css" rel="stylesheet" type="text/css">
     </head>
     <body>
 
