added uniqueness validation for email, username

--- a/app/views/users/login.erb
+++ b/app/views/users/login.erb
@@ -8,3 +8,5 @@
   <input type="password" name="password" placeholder="password"><br><br>
   <input type="submit" name="" value="submit">
 </form>
+<br>
+<a href="/signup">Sign Up</a>
