--- a/app/views/users/create_user.erb
+++ b/app/views/users/create_user.erb
@@ -12,3 +12,5 @@
   <input type="password" name="password" placeholder="password" value=""><br><br>
   <input type="submit" name="" value="Create Account">
 </form>
+<br>
+<a href="/login">Already have an account?</a>
