--- a/app/views/tweets/create_tweet.erb
+++ b/app/views/tweets/create_tweet.erb
@@ -1,7 +1,20 @@
-<h2><span class="loggedin"><%= current_user.username %></span>, create a tweet:</h2>
-<form action="/tweets" method=POST>
-<p>Enter your tweet here: <input type="text" name="content" id="content"></p>
-<input type="submit" id="submit">
+<h1>Welcome, <span class="loggedin"><%= current_user.username %></span>!</h1>
+<% if logged_in?%>
+	<a href="/tweets/new">Create New Tweet</a><br>
+	<% if @message %>
+		<a href="/users/<%= @user.slug %>">View all my tweets</a><br>
+	<% else %>
+		<a href="/tweets">View all tweets</a><br>
+	<% end %>
+<% end %>
+<hr>
 
+
+
+<h2><span class="loggedin"><%= current_user.username %></span>, create a tweet:</h2>
+
+<form action="/tweets" method=POST>
+	<p>Enter your tweet here: <input type="text" name="content" id="content"></p>
+	<input type="submit" id="submit">
 </form>
 
