--- a/app/views/tweets/edit_tweet.erb
+++ b/app/views/tweets/edit_tweet.erb
@@ -2,6 +2,6 @@
 
 <form method="POST" action="/tweets/<%= @tweet.id %>">
   <input type="hidden" name="_method" value="patch">
-  <input type="textbox" value="<%= @tweet.content %>">
+  <input type="textbox" name="content" value="<%= @tweet.content %>">
   <input type="submit" value="Edit Tweet" id="submit">
 </form>
