--- a/app/views/tweets/show_tweet.erb
+++ b/app/views/tweets/show_tweet.erb
@@ -6,8 +6,8 @@
 
 <a href="/tweets/<%=@tweet.id%>/edit">Edit Tweet</a>
 
-<form method="POST" action="/tweets/<%= @tweet.id %>">
-  <input id="hidden" type="hidden" name="_method" value="delete">
+<form method="POST" action="/tweets/<%= @tweet.id %>/delete">
+  <input type="hidden" name="_method" value="DELETE">
   <input type="submit" value="Delete Tweet" >
 </form>
 
