--- a/app/views/tweets/show.erb
+++ b/app/views/tweets/show.erb
@@ -7,7 +7,7 @@
 <h1><a href="/users/<%=@tweet.user.slug%>"><%=@tweet.user.username%></a> said:</h1>
 <h3>"<%=@tweet.content%>"</h3><br><br>
 
-<h4>If you wrote this tweet, you can edit or delete here./<h4>
+<h4>If you wrote this tweet, you can edit or delete here.<h4>
 <form method="get" action="/tweets/<%=@tweet.id%>/edit">
 <input type="submit" value="Edit Tweet">
 </form>
