--- a/app/views/layout.erb
+++ b/app/views/layout.erb
@@ -43,7 +43,7 @@
               </div>
               <button type="submit" class="btn btn-default">Tweet</button>
             </form>
-            <li><a href="#">Link</a></li>
+            <li><a href="/signup">Sign Up</a></li>
             <li class="dropdown">
               <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Account <span class="caret"></span></a>
               <ul class="dropdown-menu">
