--- a/app/views/layout.erb
+++ b/app/views/layout.erb
@@ -28,30 +28,31 @@
             <span class="icon-bar"></span>
             <span class="icon-bar"></span>
           </button>
-          <a class="navbar-brand" href="#">Fwitter</a>
+          <a class="navbar-brand" href="/">Fwitter</a>
         </div>
 
         <!-- Collect the nav links, forms, and other content for toggling -->
         <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
-          <ul class="nav navbar-nav">
-            <li><a href="#">Home</a></li>
-          </ul>
           <ul class="nav navbar-nav navbar-right">
+            <% if logged_in? %>
             <form class="navbar-form navbar-left">
               <div class="form-group">
                 <input type="text" class="form-control" placeholder="Write your tweet here...">
               </div>
               <button type="submit" class="btn btn-default">Tweet</button>
             </form>
-            <li><a href="/signup">Sign Up</a></li>
             <li class="dropdown">
               <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Account <span class="caret"></span></a>
               <ul class="dropdown-menu">
-                <li><a href="#">Log In</a></li>
+                <li><a href="#">Profile</a></li>
                 <li role="separator" class="divider"></li>
-                <li><a href="#">Log Out</a></li>
+                <li><a href="/logout">Log Out</a></li>
               </ul>
             </li>
+            <% else %>
+            <li><a href="/signup">Sign Up</a></li>
+            <li><a href="/login">Log In</a></li>
+            <% end %>
           </ul>
         </div><!-- /.navbar-collapse -->
       </div><!-- /.container-fluid -->
