jumbotron, change some params to pass tests

--- a/app/views/index.erb
+++ b/app/views/index.erb
@@ -1,1 +1,7 @@
-<h1>Index</h1>
+<div class="container">
+  <div class="jumbotron">
+    <h1>Welcome to Fwitter</h1>
+    <p>Not to be confused with Fwacebook.</p>
+    <p><a class="btn btn-primary btn-lg" href="/signup" role="button">Sign Up</a></p>
+  </div>
+</div>
