--- a/app/views/users/create_user.erb
+++ b/app/views/users/create_user.erb
@@ -13,19 +13,19 @@
     <div class="form-group">
       <!-- <label for="inputUsername3" class="col-sm-2 control-label">Username</label> -->
       <div class="col-sm-8 col-sm-offset-2">
-        <input type="username" name="user[username]"class="form-control" id="inputUsername3" placeholder="Username">
+        <input type="username" name="username"class="form-control" id="inputUsername3" placeholder="Username">
       </div>
     </div>
     <div class="form-group">
       <!-- <label for="inputEmail3" class="col-sm-2 control-label">Email</label> -->
       <div class="col-sm-8 col-sm-offset-2">
-        <input type="email" name="user[email]"class="form-control" id="inputEmail3" placeholder="Email">
+        <input type="email" name="email"class="form-control" id="inputEmail3" placeholder="Email">
       </div>
     </div>
     <div class="form-group">
       <!-- <label for="inputPassword3" class="col-sm-2 control-label">Password</label> -->
       <div class="col-sm-8 col-sm-offset-2">
-        <input type="password" name="user[password]"class="form-control" id="inputPassword3" placeholder="Password">
+        <input type="password" name="password"class="form-control" id="inputPassword3" placeholder="Password">
       </div>
     </div>
     <div class="form-group account-button">
@@ -34,4 +34,7 @@
       </div>
     </div>
   </form>
+  <div class="col-sm-12" style="text-align:center">
+    <p>Already have an account?   <a class="btn btn-default" href="/login" role="button">Log In</a></p>
+  </div>
 </div>
