--- a/app/views/users/login.erb
+++ b/app/views/users/login.erb
@@ -13,13 +13,13 @@
     <div class="form-group">
       <!-- <label for="inputEmail3" class="col-sm-2 control-label">Email</label> -->
       <div class="col-sm-8 col-sm-offset-2">
-        <input type="email" name="user[email]"class="form-control" id="inputEmail3" placeholder="Email">
+        <input type="email" name="email"class="form-control" id="inputEmail3" placeholder="Email">
       </div>
     </div>
     <div class="form-group">
       <!-- <label for="inputPassword3" class="col-sm-2 control-label">Password</label> -->
       <div class="col-sm-8 col-sm-offset-2">
-        <input type="password" name="user[password]"class="form-control" id="inputPassword3" placeholder="Password">
+        <input type="password" name="password"class="form-control" id="inputPassword3" placeholder="Password">
       </div>
     </div>
     <div class="form-group account-button">
