--- a/app/views/users/create_user.erb
+++ b/app/views/users/create_user.erb
@@ -3,11 +3,13 @@
     <h1>Sign up for an account</h1>
   </div>
   <% if flash[:message] %>
-    <div class="form-group has-error">
-      <div class="col-sm-8 col-sm-offset-2">
-        <p class="control-label"><%= flash[:message] %></p>
+    <% flash[:message].each do |message| %>
+      <div class="form-group has-error">
+        <div class="col-sm-8 col-sm-offset-2">
+          <p class="control-label"><%= message %></p>
+        </div>
       </div>
-    </div>
+    <% end %>
   <% end %>
   <form class="form-horizontal" action="/signup" method="post">
     <div class="form-group">
