--- a/public/css/main.css
+++ b/public/css/main.css
@@ -10,3 +10,30 @@
 .account-button {
   margin-top: 2em;
 }
+
+.tweet-card {
+  border: 0.5px solid #8888FF;
+  margin-top: 0.25em;
+  margin-bottom: 0.25em;
+  border-radius: 5px;
+}
+
+.tweet-text {
+  font-size: 120%;
+}
+
+.tweet-info {
+  color: #AAAAAA;
+}
+
+#user-profile-card {
+  border: 0.5px solid #8888FF;
+  border-radius: 8px;
+  margin-left: 2em;
+  margin-right: 2em;
+  background-color: #EEEEEE;
+}
+
+#user-tweets {
+  /*margin-left: 2em;*/
+}
