create tweet form, validate tweet length

--- a/app/views/users/login.erb
+++ b/app/views/users/login.erb
@@ -1,5 +1,5 @@
-<div class="col-sm-6 col-sm-offset-3 account-form">
-  <div class="col-sm-12 account-form-message">
+<div class="col-sm-6 col-sm-offset-3 fwitter-form">
+  <div class="col-sm-12 fwitter-form-message">
     <h1>Log in to your account</h1>
   </div>
   <% if flash[:message] %>
@@ -24,7 +24,7 @@
         <input type="password" name="password"class="form-control" id="inputPassword3" placeholder="Password">
       </div>
     </div>
-    <div class="form-group account-button">
+    <div class="form-group fwitter-form-button">
       <div class="col-sm-8 col-sm-offset-2">
         <button type="submit" class="btn btn-primary btn-block">Sign in</button>
       </div>
