--- a/app/views/layout.erb
+++ b/app/views/layout.erb
@@ -36,9 +36,9 @@
         <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
           <ul class="nav navbar-nav navbar-right">
             <% if logged_in? %>
-            <form class="navbar-form navbar-left">
+            <form class="navbar-form navbar-left" action="/tweets" method="post">
               <div class="form-group">
-                <input type="text" class="form-control" placeholder="Write your tweet here...">
+                <input name="content" type="text" class="form-control" placeholder="Write your tweet here...">
               </div>
               <button type="submit" class="btn btn-default">Tweet</button>
             </form>
